--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,11 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  fluttertoast: ^8.0.8
+  shared_preferences: ^2.2.0
+  contained_tab_bar_view: ^0.8.0
+  font_awesome_flutter: ^10.5.0
+  bottom_drawer: ^0.0.5
+  carousel_slider: ^4.2.1
+  modal_progress_hud_nsn: ^0.4.0
+  syncfusion_flutter_maps: ^22.2.9
+  geocoding: ^2.1.0
+  geodesy: ^0.7.0
   cupertino_icons: ^1.0.2
+  extended_image: ^8.0.2
+  logger: ^2.0.1
+  go_router: ^10.0.0
+  provider: ^6.0.5
+  http: ^1.1.0
+  flutter_riverpod: ^2.3.6
+  badges: ^3.1.1
+  image_picker: ^1.0.2
+  webview_flutter: ^4.2.2
+  dio: ^5.3.2
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
