--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   webview_flutter: ^4.2.2
   dio: ^5.3.2
   http_parser: ^4.0.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
