--- a/backend/Auth/build.gradle
+++ b/backend/Auth/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "io.jsonwebtoken:jjwt:0.9.1"
 
+    // test db - h2
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
