--- a/backend/NotificationProducer/build.gradle
+++ b/backend/NotificationProducer/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // mysql
+    implementation 'mysql:mysql-connector-java:8.0.33'
+
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
 }
