--- a/backend/Auth/src/main/resources/application.yml
+++ b/backend/Auth/src/main/resources/application.yml
@@ -1,32 +1,33 @@
-    spring:
-        datasource:
-            driver-class-name: com.mysql.cj.jdbc.Driver
-            url: ${DB_URL}/auth
-            username: ${DB_USER}
-            password: ${DB_PASSWORD}
+spring:
+    datasource:
+        driver-class-name: org.h2.Driver
+        url: jdbc:h2:tcp://localhost/~/test
+        username: sa
+        password:
 
-        jwt:
-            secret: ${SECRET_KEY}
-            token:
-                access-expire-time: 86400 # 만료시간 하루
-                refresh-expire-time: 2592000 # 만료시간 한 달
+    jwt:
+        secret: picky^^@!
+        token:
+            access-expire-time: 86400 # 만료시간 하루
+            refresh-expire-time: 2592000 # 만료시간 한 달
 
-        jpa:
+    jpa:
+        hibernate:
+            ddl-auto: create
+        open-in-view: false
+
+        properties:
             hibernate:
-                ddl-auto: update
-            open-in-view: false
+                format_sql: true
+                highlight_sql: true
 
-            properties:
-                hibernate:
-                    format_sql: true
-                    highlight_sql: true
+    h2:
+        console:
+            enabled: true  # H2 Console? ???? ?? (H2 Console? H2 Database? UI? ????? ??)
+            path: /h2-console  # H2 Console? Path
 
-
-    logging:
-        level:
-            org.hibernate:
-                SQL: debug
-                type: trace
-
-    server:
-        port: 8081
+logging:
+    level:
+        org.hibernate:
+            SQL: debug
+            type: trace
