chore: yml 수정으로 인한 value 수정

--- a/backend/NotificationProducer/build.gradle
+++ b/backend/NotificationProducer/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     // Kafka
     implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
