--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   syncfusion_flutter_charts: ^22.2.12
 
   flutter_scroll_to_top: ^2.2.4
-
+  flutter_web_plugins:
+    sdk: flutter
 
 
 dev_dependencies:
