--- a/backend/Auth/src/main/resources/application.yml
+++ b/backend/Auth/src/main/resources/application.yml
@@ -28,6 +28,8 @@ spring:
     sentinel:
       master: ${REDIS_MASTER}
       nodes: ${REDIS_HOST}:26382, ${REDIS_HOST}:26383, ${REDIS_HOST}:26384
+    lettuce:
+      shutdown-timeout: 200ms
 
 
 logging:
